Create layout and index page with css and js

--- a/web/css/blocks.css
+++ b/web/css/blocks.css
@@ -2,6 +2,13 @@
 /* Секции 1 */
 .section-v1 {
 	padding: 6rem 0;
+
+}
+
+/* Для первых секций на внутр.страницах сразу под меню (заголовки) */
+.start-sec {
+	padding-top: 9rem;
+	padding-bottom: 0;
 }
 
 /* Относительные оступы вниз от заголовков */
