--- a/web/css/main.css
+++ b/web/css/main.css
@@ -92,11 +92,12 @@ body.modalActive {
 	position: fixed;
 	overflow: hidden;
 	z-index: 1000;
+	
 	background: rgb(255, 255, 255);
-	background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 1) 90%, rgba(255, 255, 255, 0) 100%);
+	/**background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 1) 90%, rgba(255, 255, 255, 0) 100%);
 	background: -webkit-linear-gradient(180deg, rgba(255, 255, 255, 1) 90%, rgba(255, 255, 255, 0) 100%);
 	background: linear-gradient(180deg, rgba(255, 255, 255, 1) 90%, rgba(255, 255, 255, 0) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#ffffff", GradientType=1);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#ffffff", GradientType=1);**/
 }
 
 .navigation-inner {
@@ -287,8 +288,8 @@ body.modalActive {
 	}
 
 	.link-nav ul li a.link-nav__active::after {
-		 display: none;
-	 }
+		display: none;
+	}
 
 	.info-nav {
 		font-size: 1.4rem;
