--- a/web/css/typography.css
+++ b/web/css/typography.css
@@ -29,7 +29,8 @@
 
 /***** Заголовки *****/
 h1, h2, h3, h4, h5, h6 {
-   /** line-height: 1.35em;**/
+
+    /** line-height: 1.35em;**/
 }
 
 h1, h2, h4 {
@@ -68,7 +69,6 @@ h6 {
 }
 
 /* Оформление заголовка */
-
 .hLine {
     padding-left: 1em;
     position: relative;
@@ -91,17 +91,16 @@ h6 {
 
 .p-style {
     font-family: 'MontserratRegular';
-    line-height: 1.75em;    
+    line-height: 1.75em;
     margin: 0
 }
-
 
 /* На случай, если не удасться 
 присвоить класс параграфу в Yii 
 размер по умолчанию 16px*/
 p {
     font-family: 'MontserratRegular';
-    line-height: 1.75em;    
+    line-height: 1.75em;
     margin: 0
 }
 
@@ -121,12 +120,7 @@ p {
     font-size: 0.813rem;
 }
 
-
-
-
-
 /* Списки */
-
 .list-content {
     margin: 0;
     padding: 0;
@@ -137,7 +131,25 @@ p {
     margin-bottom: 0.6em;
 }
 
+/* С буллетом */
+.list-content.togList li {
+    color: var(--grayColor-v4);
+    list-style: disc;
+    display: list-item;
+    list-style-position: inside;
+}
 
+.list-content.togList li p {
+    color: var(--blackColor);
+    display: inline;
+}
+
+.list-content.togList .list-togLine li {
+    list-style: none;
+    margin-left: 1.3em;
+}
+
+/* С чертой */
 .list-togLine  li {
     list-style: none;
     position: relative;
@@ -156,16 +168,13 @@ p {
     background-color: var(--blackColor);
 }
 
-
 /* Метка */
 .label {
     font-family: 'MontserratRegular';
     font-size: 0.875rem;
 }
 
-
-
-@media screen and (max-width: 440px) {
+@media screen and (max-width:440px) {
     h1 {
         font-size: 2.7rem;
     }
@@ -173,10 +182,10 @@ p {
     h2 {
         font-size: 2.4rem;
     }
+
 }
 
-
-@media screen and (max-width: 767px) {
+@media screen and (max-width:767px) {
     .list-count {
         margin-bottom: 3.3em;
     }
@@ -184,4 +193,5 @@ p {
     .list-count:last-child {
         margin-bottom: 0;
     }
+
 }
