--- a/web/css/main.css
+++ b/web/css/main.css
@@ -87,6 +87,19 @@ body.modalActive {
 
 /*** Общее ***/
 
+.cd-auto-hide-header {
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s;
+}
+
+.cd-auto-hide-header.is-hidden {
+  -webkit-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  transform: translateY(-100%);
+}
+
 .navigation-wrp {
 	width: 100%;
 	position: fixed;
@@ -122,7 +135,6 @@ body.modalActive {
 
 .navigation-left {
 	flex-grow: 1;
-		
 	padding: 1rem 0;
 }
 
@@ -132,7 +144,7 @@ body.modalActive {
 	position: relative;
 }
 
-.logo__emblem {
+/*.logo__emblem {
 	height: 2rem;
 	width: 3.3rem;
 	background: url(../img/logo.svg) no-repeat;
@@ -142,7 +154,7 @@ body.modalActive {
 	bottom: 0;
 	left: 0;
 	z-index: 19;
-}
+}*/
 
 .logo__text-elements {
 	display: flex;
@@ -155,11 +167,11 @@ body.modalActive {
 	width: 4.7rem;
 }
 
-/** Анимация HLD **/
+/** Анимация HLD 
 .logo:hover .logo__text-elements {
 	-webkit-transform: translateX(3.6rem);
 	transform: translateX(3.6rem);
-}
+}**/
 
 /*** Ссылки ***/
 .link-nav {
@@ -244,8 +256,14 @@ body.modalActive {
 }
 
 @media screen and (max-width:991px) {
+
+	.navigation-wrp {
+		overflow: visible;
+	}
+
 	.navigation-inner {
 		padding: 0;
+		overflow: visible;
 	}
 
 	.navigation {
@@ -338,19 +356,20 @@ body.modalActive {
 	.responsive-navigation__humburger {
 		display: flex;
 		flex-direction: column;
-		height: 2rem;
 		width: 2.3rem;
 		position: relative;
 		cursor: pointer;
 		transition: background 0.3s;
 		justify-content: center;
 		z-index: 9980;
+		overflow: visible;
+		height: 1.6rem;
 	}
 
 	.responsive-navigation__humburger span {
 		display: block;
 		background: var(--pinkColor);
-		height: .180rem;
+		height: 2px;
 		transition: all 200ms ease-out;
 	}
 
@@ -358,23 +377,23 @@ body.modalActive {
 		content: "";
 		display: block;
 		background: var(--pinkColor);
-		height: .180rem;
+		height: inherit;
 		position: absolute;
 		width: 100%;
 		transition: all 300ms ease-out;
 	}
 
 	.responsive-navigation__humburger span::before {
-		margin-top: .6rem;
+		margin-top: 7px;
 	}
 
 	.responsive-navigation__humburger span::after {
-		margin-top: -.5rem;
+		margin-top: -7px;
 	}
 
 	.responsive-navigation__humburger.humburger-active span {
 		background: none;
-		transition-delay: 0s, 1s;
+
 	}
 
 	.responsive-navigation__humburger.humburger-active span::before {
